--- a/src/style.css
+++ b/src/style.css
@@ -71,7 +71,7 @@ body {
     width: 8vw;
     height: 6vh;
     border-radius: 15px;
-    border: 2px solid darkslategrey;
+    border: 3px solid var(--forest-pine);
     background-color: var(--mountain-gray);
     color: var(--golden-grass);
     font-family: "stickPlan";
@@ -93,7 +93,7 @@ body {
     background-color: var(--forest-pine);
     padding: 15px;
     border-radius: 15px;
-    border: 2px solid darkslategrey;
+    border: 12px solid var(--golden-grass);
 }
 
 h1 {
@@ -103,7 +103,12 @@ h1 {
 }
 
 h2 {
+    font-size: 30px;
+    padding-bottom: 10px;
+}
 
+p {
+    font-size: 20px;
 }
 
 #footer {
@@ -112,8 +117,29 @@ h2 {
     justify-content: space-evenly;
     align-items: center;
     background-color: var(--mountain-gray);
+    border-top: 3px solid var(--forest-pine);
 }
 
 #footer p {
     font-size: 18px;
+}
+
+.item,
+.review {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 10px;
+    margin: 10px;
+    border-radius: 10px;
+    padding: 10px;
+    background-color: var(--deep-lake-blue);
+}
+
+.restaurantImage {
+    width: 33vw;
+    height: auto;
+}
+
+.itemImage {
+    width: 20vw;
 }
